; ModuleID = '/home/carl/AnghaBench/vlc/modules/audio_output/extr_coreaudio_common.c_FramesToBytes.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/audio_output/extr_coreaudio_common.c_FramesToBytes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aout_sys_common = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.aout_sys_common*, i64)* @FramesToBytes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @FramesToBytes(%struct.aout_sys_common* %0, i64 %1) #0 {
  %3 = alloca %struct.aout_sys_common*, align 8
  %4 = alloca i64, align 8
  store %struct.aout_sys_common* %0, %struct.aout_sys_common** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = load %struct.aout_sys_common*, %struct.aout_sys_common** %3, align 8
  %7 = getelementptr inbounds %struct.aout_sys_common, %struct.aout_sys_common* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = mul i64 %5, %8
  %10 = load %struct.aout_sys_common*, %struct.aout_sys_common** %3, align 8
  %11 = getelementptr inbounds %struct.aout_sys_common, %struct.aout_sys_common* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = udiv i64 %9, %12
  ret i64 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
